--- a/lesson3/package.json
+++ b/lesson3/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   }
