--- a/lesson7/package.json
+++ b/lesson7/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp css"
+    "build": "gulp css",
+    "start": "gulp server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "browser-sync": "^2.12.8",
     "cssnext": "^1.8.4",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.1",
