--- a/demo03/package.json
+++ b/demo03/package.json
@@ -13,6 +13,12 @@
   "author": "frog",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "webpack": "^1.13.0"
   }
 }
