add asynchronous redux demo

--- a/demo17/package.json
+++ b/demo17/package.json
@@ -21,6 +21,12 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0"
+  },
+  "dependencies": {
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
