--- a/demo05/package.json
+++ b/demo05/package.json
@@ -13,7 +13,9 @@
   "author": "frog",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
   }
