--- a/demo18/package.json
+++ b/demo18/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "hot":"webpack-dev-server --inline --hot --content-base ./dist",
-    "server":"node server.js"
+    "build": "webpack",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "webpack-dev-server": "^1.16.2"
   }
 }
