--- a/demo18/package.json
+++ b/demo18/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "node server.js"
+    "start": "set NODE_ENV=dev && node app.js",
+    "hot": "webpack-dev-server --inline --hot --port 8090"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,13 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "opn": "^4.0.2",
+    "proxy-middleware": "^0.15.0",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.15.0"
   }
 }
